--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="keywords" content="footer, address, phone, icons" />
+  <meta name="keywords"  content="footer, address, phone, icons" />
 
 
   <!-- font awesome file link  -->
@@ -60,51 +60,51 @@
 
   <div id="images" class="container">
     <div class="grid">
-      <div class="cell">
+      <div class="module-border-wrap module-border-wrap">
         <div class="sliderText">
           <h3>MG-05</h3>
         </div>
-        <div class="content">
+        <div class="module content module">
           <img src="images/MG-05.jpg" class="responsive-image">
         </div>
       </div>
-      <div class="cell">
+      <div class="module-border-wrap">
         <div class="sliderText">
           <h3>MG-06</h3>
         </div>
-        <div class="content">
+        <div class="module content">
           <img src="images/MG-06.jpg" class="responsive-image">
         </div>
       </div>
-      <div class="cell">
+      <div class="module-border-wrap">
         <div class="sliderText">
           <h3>MG-19</h3>
         </div>
-        <div class="content">
+        <div class="module content">
           <img src="images/MG-19.jpg" class="responsive-image">
         </div>
       </div>
-      <div class="cell">
+      <div class="module-border-wrap">
         <div class="sliderText">
           <h3>MG-34</h3>
         </div>
-        <div class="content">
+        <div class="module content">
           <img src="images/MG-34.jpg" class="responsive-image">
         </div>
       </div>
-      <div class="cell">
+      <div class="module-border-wrap">
         <div class="sliderText">
           <h3>MG-35</h3>
         </div>
-        <div class="content">
+        <div class="module content">
           <img src="images/MG-35.jpg" class="responsive-image">
         </div>
       </div>
-      <div class="cell">
+      <div class="module-border-wrap">
         <div class="sliderText">
           <h3>MG-37</h3>
         </div>
-        <div class="content">
+        <div class="module content">
           <img src="images/MG-37.jpg" class="responsive-image">
         </div>
       </div>
